[package]
name = "rs-captions"
version = "1.0.0"
authors = ["James Hong <james.hong@cs.stanford.edu>"]

[lib]
name = "rs_captions"
crate-type = ["cdylib"]

[dependencies]
memmap = "0.7.0"
byteorder = "1.2.7"
rayon = "1.0.3"
rand = "0.6.1"
pyo3 = { version = "0.8.2", features = ["extension-module"] }
