[package]
name = "rs-captions"
version = "1.0.0"
authors = ["James Hong <james.hong@cs.stanford.edu>"]

[lib]
name = "rs_captions"
crate-type = ["cdylib"]

[dependencies]
byteorder = "1.2.7"
indicatif = "0.15.0"
memmap = "0.7.0"
pyo3 = { version = "0.11.1", features = ["extension-module"] }
rayon = "1.3.1"
subparse = "0.6.2"
